# pinball

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
fortran/: README.rst  rqbr.f
fortran/ratfor/: README.rst  rqbr.r
pinball/: __init__.py  cli.py  pinball.py
pinball/br/: fit_br.py
pinball/fnb/: fit_fn.py
quantreg/: cli.py  quantreg.py
quantreg/util/: bandwidth.py  preprocess.py
tests/: Untitled.ipynb  __init__.py  test_fit_br.py  test_pinball.py  test_quantreg.py
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
