# Consider adding a metadata section with more detailed information like 
# shown in https://github.com/scivision/f2py-examples/blob/main/setup.cfg
[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pinball/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']

[options]
python_requires = >= 3.8
packages = find:
install_requires =
  numpy >= 1.16
